# Transgemi

./: .env.example  .gitignore  GEMINI.md  LICENSE  README.md  main.py  old_scrtrans.py  pyproject.toml  requirements.txt  run_transgemi.vbs  scrtrans.py  scrtrans_t.py  scrtrans_winocr.py
core/: config_manager.py  log_buffer.py  translator_app.py
core/ui/: __init__.py  draggable_text_edit.py  region_selector.py
services/: __init__.py  cerebras_service.py  gemini_service.py  groq_service.py  openrouter_service.py  sambanova_service.py  translation_service_factory.py
subtitle/: language_pack_manager.py  prompts.py  subtitle_ocr.py  utils.py
threads/: auto_ocr_monitor.py  translation_errors.py  translation_interface.py  translation_worker.py
